Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- ============ HERO SECTION ============ -->
     <section id="home" class="hero">
         <div class="hero-text">
-            <h1>barnoosko Comics</h1>
+            <h1>barnoosko </h1>
             <p>Stories for the people who don’t “fit” the normal work life — dreamers, night owls, and rebels.</p>
             <div class="hero-buttons">
                 <a href="#comics" class="btn primary">View Comics</a>
@@ -136,7 +136,7 @@
 
     <!-- ============ FOOTER ============ -->
     <footer class="site-footer">
-        <p>© <span id="year"></span> barnoosko Comics. All rights reserved.</p>
+        <p>© <span id="year"></span> barnoosko rights reserved.</p>
     </footer>
 
 </div>
@@ -147,3 +147,4 @@
 </script>
 </body>
 </html>
+
