--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
     <!-- ============ HEADER / NAV ============ -->
     <header class="site-header">
         <div class="logo">
-            <!-- replace with your logo image if you have one -->
-            <!-- <img src="images/barnoosko-logo.png" alt="barnoosko logo"> -->
-            <span>barnoosko</span>
+            <img src="logo.png" alt="barnoosko logo" class="logo-img">
+            <span class="logo-text">barnoosko</span>
         </div>
 
         <nav class="main-nav">
@@ -147,4 +146,3 @@
 </script>
 </body>
 </html>
-
