--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="site-header">
         <div class="logo">
             <img src="logo.png" alt="barnoosko logo" class="logo-img">
-            <span class="logo-text">barnoosko</span>
+            <span class="logo-text">BARNOOSKO</span>
         </div>
 
         <nav class="main-nav">
@@ -27,7 +27,7 @@
     <!-- ============ HERO SECTION ============ -->
     <section id="home" class="hero">
         <div class="hero-text">
-            <h1>barnoosko </h1>
+            <h1>barnoosko</h1>
             <p>Stories for the people who don’t “fit” the normal work life — dreamers, night owls, and rebels.</p>
             <div class="hero-buttons">
                 <a href="#comics" class="btn primary">View Comics</a>
@@ -36,7 +36,6 @@
         </div>
 
         <div class="hero-image">
-            <!-- replace with your own banner art -->
             <div class="hero-placeholder">
                 <span>Comic Art Coming Soon</span>
             </div>
@@ -64,10 +63,8 @@
         </p>
 
         <div class="card-grid">
-            <!-- Card 1 -->
             <article class="card">
                 <div class="card-image">
-                    <!-- replace with real image -->
                     <div class="card-placeholder">Cover Art</div>
                 </div>
                 <div class="card-body">
@@ -76,7 +73,6 @@
                 </div>
             </article>
 
-            <!-- Card 2 -->
             <article class="card">
                 <div class="card-image">
                     <div class="card-placeholder">Cover Art</div>
@@ -87,7 +83,6 @@
                 </div>
             </article>
 
-            <!-- Card 3 -->
             <article class="card">
                 <div class="card-image">
                     <div class="card-placeholder">Cover Art</div>
@@ -100,7 +95,7 @@
         </div>
     </section>
 
-    <!-- ============ JOIN / CONTACT SECTION ============ -->
+    <!-- ============ JOIN ============ -->
     <section id="join" class="section join-section">
         <h2>Join barnoosko</h2>
         <p class="section-intro">
@@ -141,7 +136,6 @@
 </div>
 
 <script>
-    // set current year in footer
     document.getElementById('year').textContent = new Date().getFullYear();
 </script>
 </body>
