--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     <!-- ============ HEADER / NAV ============ -->
     <header class="site-header">
         <div class="logo">
-            <img src="logo.png" alt="barnoosko logo" class="logo-img">
-            <span class="logo-text">BARNOOSKO</span>
+            <span>barnoosko</span>
         </div>
 
         <nav class="main-nav">
@@ -27,6 +26,9 @@
     <!-- ============ HERO SECTION ============ -->
     <section id="home" class="hero">
         <div class="hero-text">
+            <!-- LOGO ABOVE THE BIG TITLE -->
+            <img src="logo.png" alt="barnoosko logo" class="hero-logo">
+
             <h1>barnoosko</h1>
             <p>Stories for the people who don’t “fit” the normal work life — dreamers, night owls, and rebels.</p>
             <div class="hero-buttons">
@@ -36,6 +38,7 @@
         </div>
 
         <div class="hero-image">
+            <!-- replace with your own banner art -->
             <div class="hero-placeholder">
                 <span>Comic Art Coming Soon</span>
             </div>
@@ -63,6 +66,7 @@
         </p>
 
         <div class="card-grid">
+            <!-- Card 1 -->
             <article class="card">
                 <div class="card-image">
                     <div class="card-placeholder">Cover Art</div>
@@ -73,6 +77,7 @@
                 </div>
             </article>
 
+            <!-- Card 2 -->
             <article class="card">
                 <div class="card-image">
                     <div class="card-placeholder">Cover Art</div>
@@ -83,6 +88,7 @@
                 </div>
             </article>
 
+            <!-- Card 3 -->
             <article class="card">
                 <div class="card-image">
                     <div class="card-placeholder">Cover Art</div>
@@ -95,7 +101,7 @@
         </div>
     </section>
 
-    <!-- ============ JOIN ============ -->
+    <!-- ============ JOIN / CONTACT SECTION ============ -->
     <section id="join" class="section join-section">
         <h2>Join barnoosko</h2>
         <p class="section-intro">
@@ -136,6 +142,7 @@
 </div>
 
 <script>
+    // set current year in footer
     document.getElementById('year').textContent = new Date().getFullYear();
 </script>
 </body>
