--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
     <!-- ============ FOOTER ============ -->
     <footer class="site-footer">
-        <p> <span id=""></span> © Barnoosko.</p>
+        <p> <span id=""></span> © Barnoosko</p>
     </footer>
 
 </div>
@@ -147,5 +147,6 @@
 </script>
 </body>
 </html>
+
 
 
