--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <!-- Card 1 -->
             <article class="card">
                 <div class="card-image">
-                    <div class="card-placeholder">Cover Art</div>
+                    <div class="card-placeholder1">Cover Art</div>
                 </div>
                 <div class="card-body">
                     <h3>Night Shift Legends</h3>
@@ -80,7 +80,7 @@
             <!-- Card 2 -->
             <article class="card">
                 <div class="card-image">
-                    <div class="card-placeholder">Cover Art</div>
+                    <div class="card-placeholder2">Cover Art</div>
                 </div>
                 <div class="card-body">
                     <h3>Barnoosko Crew</h3>
@@ -91,7 +91,7 @@
             <!-- Card 3 -->
             <article class="card">
                 <div class="card-image">
-                    <div class="card-placeholder">Cover Art</div>
+                    <div class="card-placeholder3">Cover Art</div>
                 </div>
                 <div class="card-body">
                     <h3>Zero-Alarm Mornings</h3>
@@ -147,6 +147,7 @@
 </script>
 </body>
 </html>
+
 
 
 
