--- a/index.html
+++ b/index.html
@@ -60,60 +60,74 @@
 
     <!-- ============ COMICS / JOB SECTION ============ -->
     <section id="comics" class="section">
-        <h2>Our Comics</h2>
-        <p class="section-intro">
-            Here are some of the worlds we’re building. New issues and characters are always on the way.
-        </p>
+    <h2>Our Comics</h2>
+    <p class="section-intro">
+        Here are some of the worlds we’re building. New issues and characters are always on the way.
+    </p>
 
-        <div class="card-grid">
-            <!-- Card 1 – Comic with cover -->
-            <article class="card">
-                <div class="card-image">
-                    <div class="card-placeholder" aria-label="Night Shift Legends cover art">
-                        <img src="images/nightshift.jpg" alt="Night Shift Legends Cover" class="card-img">
-                    </div>
-                </div>
-                <div class="card-body">
-                    <h3>Night Shift Legends</h3>
-                    <p>Follow the lives of people who work when the rest of the city sleeps.</p>
-                </div>
-            </article>
+    <div class="card-grid">
 
-            <!-- Card 2 – Comic with cover -->
-            <article class="card">
-                <div class="card-image">
-                    <div class="card-placeholder" aria-label="Barnoosko Crew cover art">
-                        <img src="images/barnoosko-crew.jpg" alt="Barnoosko Crew Cover" class="card-img">
-                    </div>
+        <!-- Card 1 -->
+        <article class="card">
+            <div class="card-image">
+                <div class="card-placeholder">
+                    <img src="images/nightshift.jpg" alt="Night Shift Legends Cover" class="card-img">
                 </div>
-                <div class="card-body">
-                    <h3>Barnoosko Crew</h3>
-                    <p>A group of friends trying to survive on passion projects, coffee, and chaos.</p>
-                </div>
-            </article>
+            </div>
+            <div class="card-body">
+                <h3>Night Shift Legends</h3>
+                <p>Follow the lives of people who work when the rest of the city sleeps.</p>
 
-            <!-- Card 3 – JOB CARD -->
-            <article class="card">
-                <div class="card-image">
-                    <div class="card-placeholder" aria-label="Apply for Job cover">
-                        <!-- your job image here -->
-                        <img src="images/job-cover.jpg" alt="Apply for job at barnoosko" class="card-img">
-                    </div>
-                </div>
-                <div class="card-body">
-                    <h3>Work at barnoosko</h3>
-                    <p>Join our team of storytellers, artists, and night-owl creatives.</p>
+                <a href="https://your-job-link-1.com"
+                   class="btn primary full-width job-btn"
+                   target="_blank" rel="noopener">
+                    Apply for Job
+                </a>
+            </div>
+        </article>
 
-                    <!-- APPLY BUTTON (change the href URL to your job link) -->
-                    <a href="https://your-job-link.com"
-                       class="btn primary full-width job-btn"
-                       target="_blank" rel="noopener">
-                        Apply for Job
-                    </a>
+        <!-- Card 2 -->
+        <article class="card">
+            <div class="card-image">
+                <div class="card-placeholder">
+                    <img src="images/barnoosko-crew.jpg" alt="Barnoosko Crew Cover" class="card-img">
                 </div>
-            </article>
-        </div>
-    </section>
+            </div>
+            <div class="card-body">
+                <h3>Barnoosko Crew</h3>
+                <p>A group of friends trying to survive on passion projects, coffee, and chaos.</p>
+
+                <a href="https://your-job-link-2.com"
+                   class="btn primary full-width job-btn"
+                   target="_blank" rel="noopener">
+                    Apply for Job
+                </a>
+            </div>
+        </article>
+
+        <!-- Card 3 -->
+        <article class="card">
+            <div class="card-image">
+                <div class="card-placeholder">
+                    <img src="images/job-cover.jpg" alt="Job Cover" class="card-img">
+                </div>
+            </div>
+            <div class="card-body">
+                <h3>Work at barnoosko</h3>
+                <p>Join our team of storytellers, artists, and night-owl creatives.</p>
+
+                <a href="https://your-job-link-3.com"
+                   class="btn primary full-width job-btn"
+                   target="_blank" rel="noopener">
+                    Apply for Job
+                </a>
+            </div>
+        </article>
+
+    </div>
+</section>
+
+
 
     <!-- ============ JOIN / CONTACT SECTION ============ -->
     <section id="join" class="section join-section">
@@ -167,3 +181,4 @@
 </script>
 </body>
 </html>
+
