--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
     <!-- ============ FOOTER ============ -->
     <footer class="site-footer">
-        <p><span id="year"></span> © Barnoosko</p>
+        <p><span id=""></span> © Barnoosko</p>
     </footer>
 
 </div>
@@ -181,4 +181,5 @@
 </script>
 </body>
 </html>
+
 
