--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <article class="card">
             <div class="card-image">
                 <div class="card-placeholder">
-                    <img src="images/nightshift.jpg" alt="Night Shift Legends Cover" class="card-img">
+                    <img src="nightshift.jpg" alt="Night Shift Legends Cover" class="card-img">
                 </div>
             </div>
             <div class="card-body">
@@ -90,7 +90,7 @@
         <article class="card">
             <div class="card-image">
                 <div class="card-placeholder">
-                    <img src="images/barnoosko-crew.jpg" alt="Barnoosko Crew Cover" class="card-img">
+                    <img src="barnoosko-crew.jpg" alt="Barnoosko Crew Cover" class="card-img">
                 </div>
             </div>
             <div class="card-body">
@@ -109,7 +109,7 @@
         <article class="card">
             <div class="card-image">
                 <div class="card-placeholder">
-                    <img src="images/job-cover.jpg" alt="Job Cover" class="card-img">
+                    <img src="job-cover.jpg" alt="Job Cover" class="card-img">
                 </div>
             </div>
             <div class="card-body">
@@ -181,5 +181,6 @@
 </script>
 </body>
 </html>
+
 
 
