--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
                 </div>
             </div>
             <div class="card-body">
-                <h3>Night Shift Legends</h3>
-                <p>Follow the lives of people who work when the rest of the city sleeps.</p>
+                <h3>وظيفة دوام كامل</h3>
+                <p>نبحث عن موظفين بدوام كامل يتمتعون بالالتزام والقدرة على تحمل المسؤولية، ويحرصون على تقديم أداء مستمر ومستقر لتحقيق أهداف الفريق والشركة.</p>
 
                 <a href="https://your-job-link-1.com"
                    class="btn primary full-width job-btn"
@@ -94,8 +94,8 @@
                 </div>
             </div>
             <div class="card-body">
-                <h3>Barnoosko Crew</h3>
-                <p>A group of friends trying to survive on passion projects, coffee, and chaos.</p>
+                <h3>وظيفة دوام جزئي</h3>
+                <p>نبحث عن موظفين بدوام جزئي يمتلكون المرونة والانضباط، ويستطيعون إنجاز المهام بكفاءة عالية ضمن ساعات عمل محدودة وفق احتياج الشركة.</p>
 
                 <a href="https://your-job-link-2.com"
                    class="btn primary full-width job-btn"
@@ -113,8 +113,8 @@
                 </div>
             </div>
             <div class="card-body">
-                <h3>Work at barnoosko</h3>
-                <p>Join our team of storytellers, artists, and night-owl creatives.</p>
+                <h3>وظيفة دوام ليلي</h3>
+                <p>نوفر فرص عمل بدوام ليلي للأشخاص القادرين على العمل في أوقات متأخرة، مع التركيز على الدقة والهدوء والقدرة على أداء المهام بكفاءة خلال ساعات الليل.</p>
 
                 <a href="https://your-job-link-3.com"
                    class="btn primary full-width job-btn"
@@ -181,6 +181,7 @@
 </script>
 </body>
 </html>
+
 
 
 
