--- a/index.html
+++ b/index.html
@@ -60,9 +60,10 @@
 
     <!-- ============ COMICS / JOB SECTION ============ -->
     <section id="comics" class="section">
-    <h2>Our Comics</h2>
+    <h2>OStart Your Career Journey With Us</h2>
     <p class="section-intro">
-        Here are some of the worlds we’re building. New issues and characters are always on the way.
+        We believe that everyone deserves a chance to grow, improve, and find stability.
+Whether you're looking for a full-time position, part-time opportunity, or night-shift work, Barnoosko offers a safe and supportive path toward a better future.
     </p>
 
     <div class="card-grid">
@@ -181,6 +182,7 @@
 </script>
 </body>
 </html>
+
 
 
 
