--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <!-- ============ COMICS / JOB SECTION ============ -->
     <section id="comics" class="section">
-    <h2>OStart Your Career Journey With Us</h2>
+    <h2>Start Your Career Journey With Us</h2>
     <p class="section-intro">
         We believe that everyone deserves a chance to grow, improve, and find stability.
 Whether you're looking for a full-time position, part-time opportunity, or night-shift work, Barnoosko offers a safe and supportive path toward a better future.
@@ -182,6 +182,7 @@ Whether you're looking for a full-time position, part-time opportunity, or night
 </script>
 </body>
 </html>
+
 
 
 
