--- a/index.html
+++ b/index.html
@@ -49,9 +49,8 @@
     <section id="about" class="section">
         <h2>About barnoosko</h2>
         <p>
-            barnoosko is a comic company created for people who don’t follow the traditional 9–5 path.
-            Our characters are freelancers, dreamers, gamers, caregivers, students, hustlers — anyone
-            building life in their own way.
+            Barnoosko is a supportive space created for people who feel overlooked in traditional workplaces.
+            Our mission is to provide hope, comfort, and real opportunities for individuals seeking stability, growth, or a fresh start.
         </p>
         <p>
             We want you to feel seen, laugh a little, and know that your story is worth telling.
@@ -182,6 +181,7 @@ Whether you're looking for a full-time position, part-time opportunity, or night
 </script>
 </body>
 </html>
+
 
 
 
