--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <img src="logo.png" alt="barnoosko logo" class="hero-logo">
 
             <h1>barnoosko</h1>
-            <p>Stories for the people who don’t “fit” the normal work life — dreamers, night owls, and rebels.</p>
+            <p>Your path to a better job starts here.</p>
             <div class="hero-buttons">
                 <a href="#comics" class="btn primary">View Comics</a>
                 <a href="#join" class="btn secondary">Join the Community</a>
@@ -181,6 +181,7 @@ Whether you're looking for a full-time position, part-time opportunity, or night
 </script>
 </body>
 </html>
+
 
 
 
