--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <nav class="main-nav" aria-label="Main navigation">
             <a href="#home">Home</a>
             <a href="#about">About</a>
-            <a href="#comics">Comics</a>
+            <a href="#comics">Jobs</a>
             <a href="#join">Join Us</a>
         </nav>
     </header>
@@ -181,6 +181,7 @@ Whether you're looking for a full-time position, part-time opportunity, or night
 </script>
 </body>
 </html>
+
 
 
 
