--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <h1>barnoosko</h1>
             <p>Your path to a better job starts here.</p>
             <div class="hero-buttons">
-                <a href="#comics" class="btn primary">View Comics</a>
+                <a href="#jobs" class="btn primary">View Jobs</a>
                 <a href="#join" class="btn secondary">Join the Community</a>
             </div>
         </div>
@@ -181,6 +181,7 @@ Whether you're looking for a full-time position, part-time opportunity, or night
 </script>
 </body>
 </html>
+
 
 
 
