--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@
 
         <div class="hero-image">
             <!-- replace with your own banner art -->
-            <div class="hero-placeholder" aria-label="Comic art coming soon">
-                <span>Comic Art Coming Soon</span>
-            </div>
+           <div class="hero-image">
+    <img src="job-banner.png" alt="Barnoosko Job Banner" class="hero-banner">
+</div>
+
         </div>
     </section>
 
@@ -181,6 +182,7 @@ Whether you're looking for a full-time position, part-time opportunity, or night
 </script>
 </body>
 </html>
+
 
 
 
