--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="hero-image">
             <!-- replace with your own banner art -->
            <div class="hero-image">
-    <img src="job-banner.png" alt="Barnoosko Job Banner" class="hero-banner">
+    <img src="job-banner (2).png" alt="Barnoosko Job Banner" class="hero-banner">
 </div>
 
         </div>
@@ -182,6 +182,7 @@ Whether you're looking for a full-time position, part-time opportunity, or night
 </script>
 </body>
 </html>
+
 
 
 
