--- a/index.html
+++ b/index.html
@@ -25,26 +25,24 @@
 
     <!-- ============ HERO SECTION ============ -->
     <section id="home" class="hero">
-        <div class="hero-text">
-            <!-- LOGO ABOVE THE BIG TITLE -->
-            <img src="logo.png" alt="barnoosko logo" class="hero-logo">
+    <div class="hero-text">
 
-            <h1>barnoosko</h1>
-            <p>Your path to a better job starts here.</p>
-            <div class="hero-buttons">
-                <a href="#jobs" class="btn primary">View Jobs</a>
-                <a href="#join" class="btn secondary">Join the Community</a>
-            </div>
+        <!-- LOGO ABOVE THE BIG TITLE -->
+        <img src="logo.png" alt="barnoosko logo" class="hero-logo">
+
+        <h1>barnoosko</h1>
+        <p>Your path to a better job starts here.</p>
+
+        <div class="hero-buttons">
+            <a href="#jobs" class="btn primary">View Jobs</a>
+            <a href="#join" class="btn secondary">Join the Community</a>
         </div>
 
-        <div class="hero-image">
-            <!-- replace with your own banner art -->
-           <div class="hero-image">
-    <img src="job-banner (2).png" alt="Barnoosko Job Banner" class="hero-banner">
-</div>
+        <!-- HERO IMAGE PLACED UNDER BUTTONS -->
+        <img src="job-banner (2).png" alt="Barnoosko Job Banner" class="hero-banner" style="margin-top: 2rem;">
+    </div>
+</section>
 
-        </div>
-    </section>
 
     <!-- ============ ABOUT SECTION ============ -->
     <section id="about" class="section">
@@ -182,6 +180,7 @@ Whether you're looking for a full-time position, part-time opportunity, or night
 </script>
 </body>
 </html>
+
 
 
 
