--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ Whether you're looking for a full-time position, part-time opportunity, or night
 
     <!-- ============ JOIN / CONTACT SECTION ============ -->
     <section id="join" class="section join-section">
-        <h2>Join barnoosko</h2>
+        <h2>Join barnoosko community</h2>
         <p class="section-intro">
             Want to read early, collaborate, or just say hi? Send us a message.
         </p>
@@ -180,6 +180,7 @@ Whether you're looking for a full-time position, part-time opportunity, or night
 </script>
 </body>
 </html>
+
 
 
 
