--- a/index.html
+++ b/index.html
@@ -25,24 +25,27 @@
 
     <!-- ============ HERO SECTION ============ -->
     <section id="home" class="hero">
-    <div class="hero-text">
+        <div class="hero-text">
 
-        <!-- LOGO ABOVE THE BIG TITLE -->
-        <img src="logo.png" alt="barnoosko logo" class="hero-logo">
+            <!-- LOGO ABOVE THE BIG TITLE -->
+            <img src="logo.png" alt="barnoosko logo" class="hero-logo">
 
-        <h1>barnoosko</h1>
-        <p>Your path to a better job starts here.</p>
+            <h1>barnoosko</h1>
+            <p>Your path to a better job starts here.</p>
 
-        <div class="hero-buttons">
-            <a href="#jobs" class="btn primary">View Jobs</a>
-            <a href="#join" class="btn secondary">Join the Community</a>
+            <div class="hero-buttons">
+                <!-- send user to jobs section -->
+                <a href="#comics" class="btn primary">View Jobs</a>
+                <a href="#join" class="btn secondary">Join the Community</a>
+            </div>
+
+            <!-- HERO IMAGE PLACED UNDER BUTTONS -->
+            <img src="job-banner (2).png"
+                 alt="Barnoosko Job Banner"
+                 class="hero-banner"
+                 style="margin-top: 5rem;">
         </div>
-
-        <!-- HERO IMAGE PLACED UNDER BUTTONS -->
-        <img src="job-banner (2).png" alt="Barnoosko Job Banner" class="hero-banner" style="margin-top: 5rem;">
-    </div>
-</section>
-
+    </section>
 
     <!-- ============ ABOUT SECTION ============ -->
     <section id="about" class="section">
@@ -56,81 +59,80 @@
         </p>
     </section>
 
-    <!-- ============ COMICS / JOB SECTION ============ -->
+    <!-- ============ JOB SECTION ============ -->
     <section id="comics" class="section">
-    <h2>Start Your Career Journey With Us</h2>
-    <p class="section-intro">
-        We believe that everyone deserves a chance to grow, improve, and find stability.
-Whether you're looking for a full-time position, part-time opportunity, or night-shift work, Barnoosko offers a safe and supportive path toward a better future.
-    </p>
+        <h2>Start Your Career Journey With Us</h2>
+        <p class="section-intro">
+            We believe that everyone deserves a chance to grow, improve, and find stability.
+            Whether you're looking for a full-time position, part-time opportunity, or night-shift work,
+            Barnoosko offers a safe and supportive path toward a better future.
+        </p>
 
-    <div class="card-grid">
+        <div class="card-grid">
 
-        <!-- Card 1 -->
-        <article class="card">
-            <div class="card-image">
-                <div class="card-placeholder">
-                    <img src="nightshift.jpg" alt="Night Shift Legends Cover" class="card-img">
+            <!-- Card 1 -->
+            <article class="card">
+                <div class="card-image">
+                    <div class="card-placeholder">
+                        <img src="nightshift.jpg" alt="Night Shift Legends Cover" class="card-img">
+                    </div>
                 </div>
-            </div>
-            <div class="card-body">
-                <h3>وظيفة دوام كامل</h3>
-                <p>نبحث عن موظفين بدوام كامل يتمتعون بالالتزام والقدرة على تحمل المسؤولية، ويحرصون على تقديم أداء مستمر ومستقر لتحقيق أهداف الفريق والشركة.</p>
+                <div class="card-body">
+                    <h3>وظيفة دوام كامل</h3>
+                    <p>نبحث عن موظفين بدوام كامل يتمتعون بالالتزام والقدرة على تحمل المسؤولية، ويحرصون على تقديم أداء مستمر ومستقر لتحقيق أهداف الفريق والشركة.</p>
 
-                <a href="https://your-job-link-1.com"
-                   class="btn primary full-width job-btn"
-                   target="_blank" rel="noopener">
-                    Apply for Job
-                </a>
-            </div>
-        </article>
-
-        <!-- Card 2 -->
-        <article class="card">
-            <div class="card-image">
-                <div class="card-placeholder">
-                    <img src="barnoosko-crew.jpg" alt="Barnoosko Crew Cover" class="card-img">
+                    <a href="https://your-job-link-1.com"
+                       class="btn primary full-width job-btn"
+                       target="_blank" rel="noopener">
+                        Apply for Job
+                    </a>
                 </div>
-            </div>
-            <div class="card-body">
-                <h3>وظيفة دوام جزئي</h3>
-                <p>نبحث عن موظفين بدوام جزئي يمتلكون المرونة والانضباط، ويستطيعون إنجاز المهام بكفاءة عالية ضمن ساعات عمل محدودة وفق احتياج الشركة.</p>
+            </article>
 
-                <a href="https://your-job-link-2.com"
-                   class="btn primary full-width job-btn"
-                   target="_blank" rel="noopener">
-                    Apply for Job
-                </a>
-            </div>
-        </article>
-
-        <!-- Card 3 -->
-        <article class="card">
-            <div class="card-image">
-                <div class="card-placeholder">
-                    <img src="job-cover.jpg" alt="Job Cover" class="card-img">
+            <!-- Card 2 -->
+            <article class="card">
+                <div class="card-image">
+                    <div class="card-placeholder">
+                        <img src="barnoosko-crew.jpg" alt="Barnoosko Crew Cover" class="card-img">
+                    </div>
                 </div>
-            </div>
-            <div class="card-body">
-                <h3>وظيفة دوام ليلي</h3>
-                <p>نوفر فرص عمل بدوام ليلي للأشخاص القادرين على العمل في أوقات متأخرة، مع التركيز على الدقة والهدوء والقدرة على أداء المهام بكفاءة خلال ساعات الليل.</p>
+                <div class="card-body">
+                    <h3>وظيفة دوام جزئي</h3>
+                    <p>نبحث عن موظفين بدوام جزئي يمتلكون المرونة والانضباط، ويستطيعون إنجاز المهام بكفاءة عالية ضمن ساعات عمل محدودة وفق احتياج الشركة.</p>
 
-                <a href="https://your-job-link-3.com"
-                   class="btn primary full-width job-btn"
-                   target="_blank" rel="noopener">
-                    Apply for Job
-                </a>
-            </div>
-        </article>
+                    <a href="https://your-job-link-2.com"
+                       class="btn primary full-width job-btn"
+                       target="_blank" rel="noopener">
+                        Apply for Job
+                    </a>
+                </div>
+            </article>
 
-    </div>
-</section>
+            <!-- Card 3 -->
+            <article class="card">
+                <div class="card-image">
+                    <div class="card-placeholder">
+                        <img src="job-cover.jpg" alt="Job Cover" class="card-img">
+                    </div>
+                </div>
+                <div class="card-body">
+                    <h3>وظيفة دوام ليلي</h3>
+                    <p>نوفر فرص عمل بدوام ليلي للأشخاص القادرين على العمل في أوقات متأخرة، مع التركيز على الدقة والهدوء والقدرة على أداء المهام بكفاءة خلال ساعات الليل.</p>
 
+                    <a href="https://your-job-link-3.com"
+                       class="btn primary full-width job-btn"
+                       target="_blank" rel="noopener">
+                        Apply for Job
+                    </a>
+                </div>
+            </article>
 
+        </div>
+    </section>
 
     <!-- ============ JOIN / CONTACT SECTION ============ -->
     <section id="join" class="section join-section">
-        <h2> barnoosko community</h2>
+        <h2>barnoosko community</h2>
         <p class="section-intro">
             Want to read early, collaborate, or just say hi? Send us a message.
         </p>
@@ -152,6 +154,9 @@ Whether you're looking for a full-time position, part-time opportunity, or night
             </div>
 
             <button type="submit" class="btn primary full-width">Send</button>
+
+            <!-- NEW: status message -->
+            <p id="form-status" class="form-status" aria-live="polite"></p>
         </form>
 
         <div class="contact-extra">
@@ -163,37 +168,33 @@ Whether you're looking for a full-time position, part-time opportunity, or night
 
     <!-- ============ FOOTER ============ -->
     <footer class="site-footer">
-        <p><span id=""></span> © Barnoosko</p>
+        <p>© <span id="year"></span> Barnoosko</p>
     </footer>
 
 </div>
 
 <script>
-    // set current year in footer
-    document.getElementById('year').textContent = new Date().getFullYear();
+    // set current year in footer (if span exists)
+    const yearSpan = document.getElementById('year');
+    if (yearSpan) {
+        yearSpan.textContent = new Date().getFullYear();
+    }
 
-    // prevent form from actually submitting while prototyping
-    document.getElementById('contact-form').addEventListener('submit', function (e) {
-        e.preventDefault();
-        alert('Thanks for your message! (Form demo only)');
+    // show message when form is "sent"
+    const form = document.getElementById('contact-form');
+    const status = document.getElementById('form-status');
+
+    form.addEventListener('submit', function (e) {
+        e.preventDefault(); // no real submit yet
+
+        // here you could later send data to a server / Google Sheet / etc.
+
+        // show confirmation message
+        status.textContent = 'Thank you! Your message has been sent.';
+
+        // clear inputs
+        form.reset();
     });
 </script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
