--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <h3>وظيفة دوام كامل</h3>
                     <p>نبحث عن موظفين بدوام كامل يتمتعون بالالتزام والقدرة على تحمل المسؤولية، ويحرصون على تقديم أداء مستمر ومستقر لتحقيق أهداف الفريق والشركة.</p>
 
-                    <a href="https://your-job-link-1.com"
+                    <a href="https://forms.gle/J8BkEghZBd8CJeXo6"
                        class="btn primary full-width job-btn"
                        target="_blank" rel="noopener">
                         Apply for Job
@@ -100,7 +100,7 @@
                     <h3>وظيفة دوام جزئي</h3>
                     <p>نبحث عن موظفين بدوام جزئي يمتلكون المرونة والانضباط، ويستطيعون إنجاز المهام بكفاءة عالية ضمن ساعات عمل محدودة وفق احتياج الشركة.</p>
 
-                    <a href="https://your-job-link-2.com"
+                    <a href="https://forms.gle/J8BkEghZBd8CJeXo6"
                        class="btn primary full-width job-btn"
                        target="_blank" rel="noopener">
                         Apply for Job
@@ -119,7 +119,7 @@
                     <h3>وظيفة دوام ليلي</h3>
                     <p>نوفر فرص عمل بدوام ليلي للأشخاص القادرين على العمل في أوقات متأخرة، مع التركيز على الدقة والهدوء والقدرة على أداء المهام بكفاءة خلال ساعات الليل.</p>
 
-                    <a href="https://your-job-link-3.com"
+                    <a href="https://forms.gle/J8BkEghZBd8CJeXo6"
                        class="btn primary full-width job-btn"
                        target="_blank" rel="noopener">
                         Apply for Job
@@ -198,3 +198,4 @@
 </script>
 </body>
 </html>
+
