--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- ============ HEADER / NAV ============ -->
     <header class="site-header">
         <div class="logo">
-            <span>barnoosko</span>
+            <span>Barnoosko</span>
         </div>
 
         <nav class="main-nav" aria-label="Main navigation">
@@ -198,4 +198,5 @@
 </script>
 </body>
 </html>
+
 
