--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <!-- LOGO ABOVE THE BIG TITLE -->
             <img src="logo.png" alt="barnoosko logo" class="hero-logo">
 
-            <h1>barnoosko</h1>
+            <h1>Barnoosko</h1>
             <p>Your path to a better job starts here.</p>
 
             <div class="hero-buttons">
@@ -198,6 +198,7 @@
 </script>
 </body>
 </html>
+
 
 
 
