--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <h3>وظيفة دوام جزئي</h3>
                     <p>نبحث عن موظفين بدوام جزئي يمتلكون المرونة والانضباط، ويستطيعون إنجاز المهام بكفاءة عالية ضمن ساعات عمل محدودة وفق احتياج الشركة.</p>
 
-                    <a href="https://forms.gle/iW9WroEWWa8asd1u8"
+                    <a href="https://forms.gle/TNoUjxSVZKRA2okV9"
                        class="btn primary full-width job-btn"
                        target="_blank" rel="noopener">
                         Apply for Job
@@ -198,6 +198,7 @@
 </script>
 </body>
 </html>
+
 
 
 
